Implement Reactive Firehose search with Topology-Aware coordination and bi-di gRPC